still testing layering issue on ios chrome

--- a/css/custom.css
+++ b/css/custom.css
@@ -64,6 +64,8 @@ a.post-link:focus{
 .page{
 	position: relative;
 	z-index: 10;
+	-webkit-transform: translate3d(0,0,10px);
+	transform: translate3d(0,0,10px);
 }
 /* This carousel is meant as the main header ful page version and is required to be fixed to top in order for other object to scroll over it */
 .carousel{
@@ -72,6 +74,8 @@ a.post-link:focus{
 	top: 0;
 	position: fixed;
 	z-index: 0;
+	-webkit-transform: translate3d(0,0,0px);
+transform: translate3d(0,0,0px);
 }
 .item,
 .active {
@@ -86,13 +90,11 @@ a.post-link:focus{
 .fill {
     width: 100%;
     height: 100%;
-    /*
-	background-position: center;
-   -webkit-background-size: cover;
+    /*background-position: center;
+    -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
-    -o-background-size: cover;
-	*/
+    -o-background-size: cover;*/
 }
 
 /* Navbar custom styles */
@@ -122,6 +124,8 @@ a.post-link:focus{
 	position: fixed;
 	top: 0;
 	z-index:15;
+	-webkit-transform: translate3d(0,0,15px);
+	transform: translate3d(0,0,15px);
 }
 .navbar-custom a,
 .navbar-custom .nav .dropdown-menu a {
